--- a/public/admin.html
+++ b/public/admin.html
@@ -113,6 +113,9 @@
                         <button id="open-grant-cp-search" class="admin-menu-button" style="width: 100%; margin-top: 5px;">
                             <i class="fa-solid fa-search"></i> Найти пользователя
                         </button>
+                        <button id="open-force-complete-search" class="admin-menu-button" style="width: 100%; margin-top: 15px; background-color: var(--warning-color);">
+                            <i class="fa-solid fa-bolt"></i> Принудительно выполнить
+                        </button>
                     </div>
                     <div class="admin-form" style="margin-top: 20px;">
                         <label>Заморозка/разморозка звезд Чекпоинта<div class="tooltip">?<span class="tooltip-text">Временно запрещает пользователю тратить звёзды Чекпоинта. Введите 0 дней для немедленной разморозки.</span></div></label>
