--- a/public/admin.html
+++ b/public/admin.html
@@ -131,6 +131,15 @@
                             <i class="fa-solid fa-search"></i> Найти пользователя
                         </button>
                         </div>
+                  <div class="quest-card" style="margin-top: 20px;">
+                <div class="user-management-section">
+                    <h3><i class="fa-solid fa-clipboard-list" style="color: var(--action-color);"></i> Журнал выдачи (7 дней)</h3>
+                    <div id="admin-grant-log-list" style="max-height: 300px; overflow-y: auto; padding-top: 10px; display: flex; flex-direction: column; gap: 8px;">
+                        <p style="text-align: center; color: var(--text-color-muted);">Загрузка журнала...</p>
+                    </div>
+                </div>
+            </div>
+            </div>
                 </div>
             </div>
 
