--- a/public/admin.html
+++ b/public/admin.html
@@ -568,7 +568,11 @@
                 <h1 class="page-header-title">Twitch награды</h1>
                 <div style="width: 60px;"></div>
             </div>
-            <div id="twitch-rewards-container" class="quests-container"></div>
+            <div id="twitch-rewards-container" class="pending-actions-grid" style="padding: 10px 0;">
+                </div>
+            <button id="save-twitch-order-button" class="admin-action-btn approve hidden" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 100; width: auto; padding: 10px 20px;">
+                <i class="fa-solid fa-save"></i> Сохранить порядок
+            </button>
         </div>
 
         <div id="view-admin-roulette" class="view hidden">
@@ -872,10 +876,21 @@
                         </select>
                         <input type="number" name="target_value" placeholder="Например, 500 (сообщений)" style="margin-top: 10px;">
                     </div>
-                    <div style="margin-top: 15px;">
+                    <div style="margin-top: 15px;" id="legacy-promocode-field-wrapper">
                       <label for="promocode-amount-input">Сумма промокода (звёзды)</label>
-                      <input type="number" id="promocode-amount-input" name="promocode_amount" placeholder="Например, 10" required>
+                      <input type="number" id="promocode-amount-input" name="promocode_amount" placeholder="Например, 10">
                     </div>
+
+                    <div class="admin-feature-6971" style="display: none; margin-top: 15px; padding-top: 15px; border-top: 1px solid var(--divider-glass-color);">
+                        <label for="reward-type-select">Тип награды</label>
+                        <select id="reward-type-select" name="reward_type">
+                            <option value="promocode">Промокод (Звёзды)</option>
+                            <option value="tickets">Билеты (Розыгрыши)</option>
+                        </select>
+                        <label for="reward-amount-input" style="margin-top: 10px;">Количество</label>
+                        <input type="number" id="reward-amount-input" name="reward_amount" placeholder="Например, 10">
+                    </div>
+                    
                     <div class="prompt-actions" style="margin-top: 20px;">
                         <button type="button" class="cancel-btn" data-close-modal="twitch-reward-settings-modal">Отмена</button>
                         <button type="submit" class="confirm-btn">Сохранить</button>
