--- a/public/admin.html
+++ b/public/admin.html
@@ -875,7 +875,7 @@
                     </div>
                     <div style="margin-top: 15px;" id="legacy-promocode-field-wrapper">
                       <label for="promocode-amount-input">Сумма промокода (звёзды)</label>
-                      <input type="number" id="promocode-amount-input" name="promocode_amount" placeholder="Например, 10">
+                      <input type="number" id="promocode-amount-input" name="promocode_amount" placeholder="Например, 10" required>
                     </div>
 
                     <div class="admin-feature-6971" style="display: none; margin-top: 15px; padding-top: 15px; border-top: 1px solid var(--divider-glass-color);">
@@ -885,7 +885,7 @@
                             <option value="tickets">Билеты (Розыгрыши)</option>
                         </select>
                         <label for="reward-amount-input" style="margin-top: 10px;">Количество</label>
-                        <input type="number" id="reward-amount-input" name="reward_amount" placeholder="Например, 10">
+                        <input type="number" id="reward-amount-input" name="reward_amount" placeholder="Например, 10" required>
                         
                         <label for="reward-sort-order-input" style="margin-top: 10px;">Порядковый номер (#)</label>
                         <input type="number" id="reward-sort-order-input" name="sort_order" placeholder="Пусто = в конец">
