--- a/public/admin.html
+++ b/public/admin.html
@@ -566,8 +566,10 @@
             <div class="page-header">
                 <button class="back-button" data-view="view-admin-main"><i class="fa-solid fa-arrow-left"></i> Назад</button>
                 <h1 class="page-header-title">Twitch награды</h1>
-                <div style="width: 60px;"></div>
-            </div>
+                <button id="reload-twitch-rewards-btn" class="back-button" style="width: 60px; font-size: 18px; text-align: right; padding-right: 5px;">
+                    <i class="fa-solid fa-rotate-right"></i>
+                </button>
+                </div>
             <div id="twitch-rewards-container" class="pending-actions-grid" style="padding: 10px 0;">
                 </div>
         </div>
