--- a/public/admin.html
+++ b/public/admin.html
@@ -218,7 +218,10 @@
             <div class="page-header">
                 <button class="back-button" data-view="view-admin-main"><i class="fa-solid fa-arrow-left"></i> Назад</button>
                 <h1 class="page-header-title">Ожидают действия</h1>
-                <div style="width: 60px;"></div>
+                
+                <button id="reload-pending-actions-btn" class="back-button" style="width: 60px; font-size: 18px; text-align: right; padding-right: 5px;">
+                    <i class="fa-solid fa-rotate-right"></i>
+                </button>
             </div>
             <div class="tabs-container">
                 <button class="tab-button active" data-tab="submissions"><i class="fa-solid fa-user-check"></i> Проверки</button>
