--- a/public/admin.html
+++ b/public/admin.html
@@ -278,10 +278,13 @@
                         <span class="setting-label">Гонка за скинами</span>
                         <label class="toggle-switch"><input type="checkbox" id="setting-skin-race-enabled"><span class="toggle-slider"></span></label>
                     </div>
+                    
+                    <div class="setting-item">
+                        <span class="setting-label">Система Аукциона</span>
+                        <label class="toggle-switch"><input type="checkbox" id="setting-auction-enabled"><span class="toggle-slider"></span></label>
+                    </div>
                     <div class="setting-item">
                         <span class="setting-label">Система Заданий</span>
-                        <label class="toggle-switch"><input type="checkbox" id="setting-quests-enabled"><span class="toggle-slider"></span></label>
-                    </div>
                     <div class="setting-item">
                         <span class="setting-label">Система Челленджей</span>
                         <label class="toggle-switch"><input type="checkbox" id="setting-challenges-enabled"><span class="toggle-slider"></span></label>
