--- a/public/admin.html
+++ b/public/admin.html
@@ -285,6 +285,8 @@
                     </div>
                     <div class="setting-item">
                         <span class="setting-label">Система Заданий</span>
+                        <label class="toggle-switch"><input type="checkbox" id="setting-quests-enabled"><span class="toggle-slider"></span></label>
+                    </div>
                     <div class="setting-item">
                         <span class="setting-label">Система Челленджей</span>
                         <label class="toggle-switch"><input type="checkbox" id="setting-challenges-enabled"><span class="toggle-slider"></span></label>
