--- a/public/menu.html
+++ b/public/menu.html
@@ -50,18 +50,21 @@
     </div>
 
     <div id="view-dashboard" class="view">
-        <div id="main-slider-container" class="slider-container">
-            <div class="slider-wrapper">
-                <a href="/events" class="slide" data-event="skin_race">
-                    <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Гонка за скинами">
-                </a>
-               <a href="/halloween" class="slide" data-event="cauldron" style="display: none;">
-                    <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Хэллоуин Ивент">
-                </a>
-            </div>
-            <button id="slide-prev-btn" class="slider-arrow prev"><i class="fa-solid fa-chevron-left"></i></button>
-            <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
-            <div class="slider-dots"></div>
+       <div id="main-slider-container" class="slider-container">
+                <div class="slider-wrapper">
+                        <a href="/events" class="slide" data-event="skin_race">
+                                <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Гонка за скинами">
+                        </a>
+                       <a href="/halloween" class="slide" data-event="cauldron" style="display: none;">
+                                <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Хэллоуин Ивент">
+                        </a>
+                        
+                        <a href="/auction" class="slide" data-event="auction" style="display: none;">
+                                <img id="auction-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Аукцион">
+                        </a>
+                </div> <button id="slide-prev-btn" class="slider-arrow prev"><i class="fa-solid fa-chevron-left"></i></button>
+                <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
+                <div class="slider-dots"></div>
         </div>
 
         <div id="challenge-container"></div>
