--- a/public/menu.html
+++ b/public/menu.html
@@ -55,7 +55,7 @@
                         <a href="/events" class="slide" data-event="skin_race">
                                 <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Гонка за скинами">
                         </a>
-                       <a href="/halloween" class="slide" data-event="cauldron" style="display: none;">
+                       <a href="/halloween" class="slide" data-event="cauldron">
                                 <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Хэллоуин Ивент">
                         </a>
                         
