--- a/public/admin.html
+++ b/public/admin.html
@@ -260,6 +260,11 @@
                             <label for="setting-checkpoint-banner-url">URL баннера "Марафон Чекпоинт"</label>
                             <input type="text" id="setting-checkpoint-banner-url" placeholder="https://example.com/banner2.png">
                         </div>
+                        <div>
+                            <label for="setting-auction-banner-url">URL баннера "Аукцион"</label>
+                            <input type="text" id="setting-auction-banner-url" placeholder="https://example.com/auction.png">
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
