--- a/public/menu.html
+++ b/public/menu.html
@@ -59,7 +59,7 @@
                                 <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Хэллоуин Ивент">
                         </a>
                         
-                        <a href="/auction.html" class="slide" data-event="auction" style="display: none;">
+                        <a href="/auction" class="slide" data-event="auction" style="display: none;">
                                 <img id="auction-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Аукцион">
                         </a>
                 </div> <button id="slide-prev-btn" class="slider-arrow prev"><i class="fa-solid fa-chevron-left"></i></button>
