--- a/public/auction.html
+++ b/public/auction.html
@@ -14,6 +14,10 @@
     </div>
 
     <div class="container">
+        <a href="/menu" class="header-back-button">
+            <i class="fa-solid fa-chevron-left"></i> ГЛАВНАЯ
+        </a>
+
         <h2 class="page-title">Активные лоты</h2>
         
         <div id="auctions-list" class="auctions-container">
@@ -115,6 +119,7 @@
             </div>
         </div>
     </div>
+  
     <footer class="app-footer">
         <a href="/menu" class="footer-item"> 
             <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
