--- a/public/auction.html
+++ b/public/auction.html
@@ -18,8 +18,10 @@
             <i class="fa-solid fa-chevron-left"></i> ГЛАВНАЯ
         </a>
 
-        <h2 class="page-title">Активные лоты</h2>
-        
+        <div class="page-header">
+            <h3 class="page-subtitle">ВСЕ ЗАВИСИТ ОТ ТЕБЯ</h3>
+            <h2 class="page-title">АУКЦИОН</h2>
+        </div>
         <div id="auctions-list" class="auctions-container">
             </div>
 
