--- a/public/auction.html
+++ b/public/auction.html
@@ -74,7 +74,7 @@
     <div id="bids-history-modal" class="modal-overlay hidden">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 id="bids-history-modal-title" style="margin: 0;">История ставок</h3>
+                <h3 id="bids-history-modal-title" style="margin: 0;">Все ставки</h3>
                 <button type="button" class="modal-close-btn">&times;</button>
             </div>
             <div class="modal-body">
