--- a/public/auction-overlay.html
+++ b/public/auction-overlay.html
@@ -46,11 +46,10 @@
             left: 0;
             width: 600px;
             height: 240px; 
-            /* Фон темнее (почти черный) + стекло */
-            background-color: rgba(18, 18, 18, 0.85); 
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
             backdrop-filter: blur(15px);
             -webkit-backdrop-filter: blur(15px);
-            border: 1px solid var(--border-color);
+            /* border: 1px solid var(--border-color);  <-- УДАЛЕНО */
             border-radius: 12px;
             box-shadow: 0 5px 20px rgba(0,0,0,0.4);
             display: flex;
