--- a/public/auction-overlay.html
+++ b/public/auction-overlay.html
@@ -46,8 +46,7 @@
             left: 0;
             width: 600px;
             height: 240px; 
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), /* <-- 40% затемнение */
-            rgba(18, 18, 18, 0.85); /* <-- Твой старый фон */
+            background-color: rgba(10, 10, 10, 0.92);
             backdrop-filter: blur(15px);
             -webkit-backdrop-filter: blur(15px);
             /* border: 1px solid var(--border-color);  <-- УДАЛЕНО */
