--- a/public/auction-overlay.html
+++ b/public/auction-overlay.html
@@ -73,9 +73,7 @@
         .skin-container { 
             width: 200px;
             height: 150px;
-            background-image: 
-                linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
-                url('https://i.postimg.cc/sDGrJ8z6/fon-variant2.png');
+            background-color: #000; /* Ставим чистый черный фон */
             background-size: cover;
             background-position: center;
             border-radius: 8px; 
