--- a/public/auction-overlay.html
+++ b/public/auction-overlay.html
@@ -242,7 +242,7 @@
         </div>
 
         <div id="promo-overlay" class="promo-overlay">
-            <img id="promo-image" src="https://i.postimg.cc/0QQWscYC/600h240.png" alt="Promo">
+            <img id="promo-image" src="https://i.postimg.cc/k50xGsKM/600h240.png" alt="Promo">
         </div>
 
     </div> 
