--- a/public/menu.html
+++ b/public/menu.html
@@ -62,18 +62,13 @@
                         <a href="/auction" class="slide" data-event="auction" style="display: none;">
                                 <img id="auction-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Аукцион">
                         </a>
+                  <a id="checkpoint-link" href="/checkpoint" class="slide" data-event="checkpoint" style="text-decoration: none; display: block;">
+                                <img id="checkpoint-banner-img" src="https://i.postimg.cc/6p39wgzJ/1200-324.png" alt="Марафон Чекпоинт" style="width: 100%; display: block;">
+                        </a>
                 </div> <button id="slide-prev-btn" class="slider-arrow prev"><i class="fa-solid fa-chevron-left"></i></button>
                 <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
                 <div class="slider-dots"></div>
         </div>
-        <div id="challenge-container"></div>
-        <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
-
-        <a id="checkpoint-link" href="/checkpoint" style="text-decoration: none; display: block; margin-bottom: 15px;">
-            <img id="checkpoint-banner-img" src="https://i.postimg.cc/6p39wgzJ/1200-324.png" alt="Марафон Чекпоинт" style="width: 100%; border-radius: 12px; display: block;">
-        </a>
-        <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
-
         <div id="quest-choose-wrapper">
             <button id="quest-choose-btn" class="quest-choose-btn-roulette">НАЧАТЬ ИСПЫТАНИЕ</button>
             <div id="quest-choose-container" class="quest-choose-container hidden"></div>
