--- a/public/menu.html
+++ b/public/menu.html
@@ -69,6 +69,8 @@
                 <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
                 <div class="slider-dots"></div>
         </div>
+        <div id="challenge-container"></div>
+        <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
         <div id="quest-choose-wrapper">
             <button id="quest-choose-btn" class="quest-choose-btn-roulette">НАЧАТЬ ИСПЫТАНИЕ</button>
             <div id="quest-choose-container" class="quest-choose-container hidden"></div>
