--- a/public/auction.html
+++ b/public/auction.html
@@ -14,12 +14,13 @@
     </div>
 
     <div class="container">
-        <a href="/menu" class="header-back-button">
-            <i class="fa-solid fa-chevron-left"></i> ГЛАВНАЯ
-        </a>
-
-        <div class="page-header">
-            <h2 class="page-title">АУКЦИОН</h2>
+        <div class="new-header-container">
+            <a href="/menu" class="header-back-button">
+                <i class="fa-solid fa-chevron-left"></i> ГЛАВНАЯ
+            </a>
+            <div class="page-header">
+                <h2 class="page-title">АУКЦИОН</h2>
+            </div>
         </div>
         
         <div id="auctions-list" class="auctions-container">
