--- a/public/auction.html
+++ b/public/auction.html
@@ -101,8 +101,8 @@
                     <label>URL картинки</label>
                     <input type="text" id="auction-image-input" placeholder="https://...">
                     
-                    <label>Дата окончания (основной таймер)</label>
-                    <input type="datetime-local" id="auction-main-end-date-input" required>
+                    <label>Длительность (часы)</label>
+                    <input type="number" id="auction-cooldown-input" value="24" min="1" required>
                     
                     <label>Доп.минуты (после ставки)</label>
                     <input type="number" id="auction-snipe-minutes-input" value="5" min="1" required>
