--- a/public/admin.html
+++ b/public/admin.html
@@ -921,6 +921,7 @@
                         <select id="reward-type-select" name="reward_type">
                             <option value="promocode">Промокод (Звёзды)</option>
                             <option value="tickets">Билеты (Розыгрыши)</option>
+                            <option value="none">Нет (только лог)</option>
                         </select>
                         <label for="reward-amount-input" style="margin-top: 10px;">Количество</label>
                         <input type="number" id="reward-amount-input" name="reward_amount" placeholder="Например, 10" required>
